tests/fixtures/positive/style/RedundantConstructorKeyword.kt
package style

class MyClass constructor(val name: String)

class AnotherClass constructor(val x: Int, val y: Int)

data class DataFoo constructor(val foo: Int)

abstract class AbstractBar constructor(val bar: String)
